vote-app-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis.vote-redis
        image: 192.168.56.10:8082/voteapp/voting-app:c
        name: vote
        ports:
        - containerPort: 80
          name: vote
      imagePullSecrets:
      - name: nexus
