vote-app-frontend/service.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    apps: vote
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 80
      name: vote-service
  selector:
    app: vote
